crates/pandalang/src/snapshots/pandalang__parser__tests__parses@app__add.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/app/add.panda
---
Ok(
    App(
        App {
            fun: App(
                App {
                    fun: Fun(
                        Fun {
                            arg: "x",
                            body: Fun(
                                Fun {
                                    arg: "y",
                                    body: BinOp(
                                        BinOp {
                                            left: Var(
                                                Var {
                                                    name: "x",
                                                },
                                            ),
                                            right: Var(
                                                Var {
                                                    name: "y",
                                                },
                                            ),
                                            kind: Add,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    arg: Int(
                        Int {
                            n: 2,
                        },
                    ),
                },
            ),
            arg: Int(
                Int {
                    n: 3,
                },
            ),
        },
    ),
)
