crates/pandalang/src/snapshots/pandalang__parser__tests__parses@app__add_one.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/app/add_one.panda
---
Ok(
    App(
        App {
            fun: Fun(
                Fun {
                    patt: Id {
                        name: "x",
                        typ: Base {
                            name: "Int",
                        },
                    },
                    body: BinOp(
                        BinOp {
                            left: Var(
                                Var {
                                    name: "x",
                                },
                            ),
                            right: Int(
                                Int {
                                    n: 1,
                                },
                            ),
                            kind: Add,
                        },
                    ),
                },
            ),
            arg: Int(
                Int {
                    n: 3,
                },
            ),
        },
    ),
)
