crates/pandalang/src/snapshots/pandalang__parser__tests__parses@app__id.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/app/id.panda
---
Ok(
    App(
        App {
            fun: Fun(
                Fun {
                    arg: "x",
                    body: Var(
                        Var {
                            name: "x",
                        },
                    ),
                },
            ),
            arg: Int(
                Int {
                    n: 3,
                },
            ),
        },
    ),
)
